adicionado o link para meu github

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
           <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
+          <h1>Sou o Presley Vasconcelos</h1>
           <h2>Desenvolvedor Frontend</h2>
 
           <div class="redes-sociais">
             <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
+            <a href="#" class="https://github.com/PresleyDev"><i class="fab fa-github"></i></a>
             <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
         <div class="img-home">
           <div class="img-box inner-shadow">
-            <img class="outer-shadow" src="src/imagens/foto-perfil.png" alt="foto do perfil do Ricardo" />
+            <img class="outer-shadow" src="./src/imagens/foto-perfil.jpeg" alt="foto do perfil do Presley" />
           </div>
         </div>
       </div>
@@ -82,18 +82,18 @@
       <div class="row">
         <div class="imagem-sobre-mim">
           <div class="img-box inner-shadow">
-            <img src="src/imagens/foto-perfil.png" alt="foto sobre mim" class="outer-shadow" />
+            <img src="./src/imagens/foto-perfil.jpeg" alt="foto sobre mim" class="outer-shadow" />
           </div>
         </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me chamo Ricardo Dias e sou um desenvolvedor frontend em
+            <strong>Olá! Me chamo Presley e sou um desenvolvedor frontend em
               formação!</strong>
               Gosto MUITO da área de tecnologia, e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
           <p>
-           Estou sempre me desafiando coim novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
+           Estou sempre me desafiando com novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
           </p>
 
           <p>
