--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="redes-sociais">
             <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/PresleyDev" class="outer-shadow"><i class="fab fa-github"></i></a>
             <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
