--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
           <h2>Desenvolvedor Frontend</h2>
 
           <div class="redes-sociais">
-            <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.linkedin.com/in/presley-vasconcelos-7a6770310/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://wa.me/5511983160974" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
             <a href="https://github.com/PresleyDev" class="outer-shadow"><i class="fab fa-github"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/psedevcreations/" class="outer-shadow"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
